swagger and JWT authentication
